Refactor tests: Locale, assertions & mock calls
Modernize and clean up unit tests: replace new Locale(...) with Locale.of(...) or Locale constants, consolidate AssertJ assertions into fluent chains, and replace ad-hoc size/boolean checks with assertEquals/assertThat conveniences. Simplify Mockito usage by removing unnecessary eq(...) matchers and an unused import, add minor test setup comments, and reorganize TurSNMergeProvidersProcessTest (formatting and mock/behavior adjustments) including ensuring merge-locale behavior is tested. Overall changes improve readability and consistency across tests.